# asc-native

./: .gitmodules  CMakeLists.txt  README.md
scripts/: post.js
src/: assemblyscript.h  glue.h  main.c  wtf.c  wtf.h
